--- a/style.css
+++ b/style.css
@@ -7,10 +7,69 @@
     background-color: white;
     text-align: center;
 }
-.table-responsive{
-    text-align: center;
-    width: 80%;
-}
 .container a{
     text-decoration: none;
+}
+body {font-family: Arial, Helvetica, sans-serif;}
+/*form {border: 3px solid #f1f1f1;}*/
+
+input[type=email], input[type=password], input[type=text] {
+    width: 100%;
+    padding: 10px 1px;
+    margin: 2px 0;
+    display: inline-block;
+    /*border: 1px solid #ccc;*/
+    box-sizing: border-box;
+    text-align: center;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 1px;
+    margin: 2px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    /*padding: 10px 18px;*/
+    background-color: #f44336;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 0px 0 0px 0;
+}
+
+img.avatar {
+    width: 20%;
+    /*border-radius: 30%;*/
+}
+
+.container .log {
+    width: 30%;
+    padding: 0px;
+}
+
+span.psw {
+    float: right;
+    /*padding-top: 16px;*/
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
 }
