--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ input[type=email], input[type=password], input[type=text] {
     box-sizing: border-box;
     text-align: center;
 }
+.short{
+    width: 80%;
+    text-align: center;
+}
 
 button {
     background-color: #4CAF50;
@@ -32,15 +36,22 @@ button {
     cursor: pointer;
     width: 100%;
 }
-
 button:hover {
+    opacity: 0.8;
+}
+.cancelbtn:hover {
     opacity: 0.8;
 }
 
 .cancelbtn {
     width: auto;
-    /*padding: 10px 18px;*/
     background-color: #f44336;
+    color: white;
+    padding: 5px 5px 5px 5px;
+    border: none;
+    cursor: pointer;
+    width: 40%;
+    text-align: center;
 }
 
 .imgcontainer {
@@ -72,4 +83,65 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
+}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: white;
+    margin: 5px auto; /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
+}
+.container_2{
+    width: 100%;
+    text-align: center;
+    /*padding: 5px 5px 5px 5px;*/
+    /*margin: 5px 5px 5px 5px;*/
+}
+/* The Close Button */
+.close {
+    /* Position it in the top right corner outside of the modal */
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+/* Close button on hover */
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
 }
